# LawChat-Server

./: .gitignore  README.md  app.py  config.json  mcp_server_legal.py  pyproject.toml
